@startuml Action


interface "ReversibleActionType<T>" {
    +dataStorage?: T | undefined
    +apply(data?: T | undefined): void
    +reverse(data?: T | undefined): void
}
abstract class "ReversibleAction<T>" implements "ReversibleActionType<T>" {
    +dataStorage: T
    +{abstract} apply(): void
    +{abstract} reverse(): void
    +{static} of(template: ReversibleActionType<T>): ReversibleAction<T>
}
class "ChangeValueAction<T>" extends "ReversibleAction<T>" {
    -editor: AbstractEditor
    -propertyName: string
    -originalValue: T
    -newValue: T
    +apply(): void
    +reverse(): void
    +{static} for(editor: AbstractEditor, propertyName: string, newValue: T): ChangeValueAction<T>
}

' "ReversibleActionType<T>" <|.. "ReversibleAction<T>"
' "ReversibleAction<T>" <|.. "ChangeValueAction<T>"

@enduml